# CloneCat

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml  version-bump.yml
clonecat/: __init__.py
src/twin/: __init__.py  attributes.py  import_helper.py  registry.py  twin.py  types.py
src/twin/inspectors/: base.py  empty.py  model.py
src/twinly/: __init__.py  registry.py  twinly.py
twinly/: __init__.py
